Bug 135487 - UI: Color stripe for font color or highlight color is missing (skia)
Summary: UI: Color stripe for font color or highlight color is missing (skia)
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
7.1.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:7.1.0 target:7.0.2
Keywords:
: 136479 136664 (view as bug list)
Depends on:
Blocks: Skia
  Show dependency treegraph
 
Reported: 2020-08-06 09:18 UTC by Telesto
Modified: 2020-09-11 09:02 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Telesto 2020-08-06 09:18:47 UTC
Description:
UI: Color stripe for font color or highlight color is missing

Closely related: bug 135121

Steps to Reproduce:
1. Open Writer -> Notice missing color strips in the toolbar/for highlight color/font color

Actual Results:
Blank/gray

Expected Results:
Color


Reproducible: Always


User Profile Reset: No



Additional Info:
Version: 7.1.0.0.alpha0+ (x64)
Build ID: <buildversion>
CPU threads: 4; OS: Windows 6.3 Build 9600; UI render: Skia/Raster; VCL: win
Locale: ru-RU (nl_NL); UI: en-US
Calc: CL
Comment 1 Telesto 2020-08-06 09:21:34 UTC
Screenshot: attachment 163844 [details]
Comment 2 Roman Kuznetsov 2020-08-08 18:51:58 UTC
confirm in

Version: 7.1.0.0.alpha0+ (x64)
Build ID: <buildversion>
CPU threads: 4; OS: Windows 6.1 Service Pack 1 Build 7601; UI render: Skia/Vulkan; VCL: win
Locale: ru-RU (ru_RU); UI: en-US
Calc: CL

without Skia UI shows these strips on widgetes
Comment 3 Commit Notification 2020-08-21 07:55:35 UTC
Luboš Luňák committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/600ff56010f5297cab7faf4bc44ae29dfb404d2f

fix setting clip region for new Skia graphics objects (tdf#135487)

It will be available in 7.1.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2020-08-21 14:43:28 UTC
Luboš Luňák committed a patch related to this issue.
It has been pushed to "libreoffice-7-0":

https://git.libreoffice.org/core/commit/67f96e7e43725b44643ce241c472742bb1dc18e8

fix setting clip region for new Skia graphics objects (tdf#135487)

It will be available in 7.0.2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Ming Hua 2020-09-07 05:08:43 UTC
*** Bug 136479 has been marked as a duplicate of this bug. ***
Comment 6 Ming Hua 2020-09-11 09:02:12 UTC
*** Bug 136664 has been marked as a duplicate of this bug. ***