fix setting clip region for new Skia graphics objects (tdf#135487)

Set the clip region only after possibly creating the surface, because
creating the surface sets the default clip region.

Change-Id: I2c344397336fa487f55553f49e40704ef05b2100